--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,3 @@
-/* ------------------COLORS----------------- 
-site accent -  #2196f3;
-maine-text - #757575;
-head-text - #212121;
-maine-background #fff;
-secondary-background - #F5F4FA
-footer-mail-tel - rgba(255, 255, 255, 0.6);
-
-btn-hover - background: #188CE8;
-btn-hover box-shadow: 0px 4px 4px rgb(0 0 0 / .15);
-*/
-
 :root {
   --site-accent-color: #2196f3;
   --primary-text-color: #757575;
@@ -34,7 +22,18 @@ body {
 .link {
   text-decoration: none;
 }
-
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 /* ------------------ LOGO ---------------- */
 
 .logo {
@@ -50,11 +49,6 @@ body {
 .footer > .logo {
   color: var(--primary-white-color);
 }
-
-/* ------------------ HEADER ---------------- */
-/* TODO: font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em; */
 .header-nav-link {
   font-weight: 500;
   line-height: 1.14;
@@ -104,7 +98,6 @@ body {
 }
 /* ----------------- FEATURES SECTION ----------------- */
 
-/* TODO: ------------------ Hide h2 */
 .features-title {
   font-weight: 700;
   line-height: 1.14;
@@ -126,7 +119,6 @@ body {
 .team-section {
   background-color: var(--secondary-bg-color);
 }
-/* TODO: Check this */
 .team-heading {
   font-weight: 700;
   font-size: 36px;
@@ -134,13 +126,15 @@ body {
   text-align: center;
   color: var(--secondary-text-color);
 }
-.teammate-list {
+.teammate-name {
   font-size: 16px;
   line-height: 1.19;
-}
-.teammate-name {
   font-weight: 500;
   color: var(--secondary-text-color);
+}
+.teammate-text {
+  font-size: 16px;
+  line-height: 1.19;
 }
 /* ----------------- FOOTER ----------------- */
 .footer {
@@ -160,9 +154,6 @@ body {
 }
 
 /*  ----------------- PORTFOLIO ----------------- */
-/* TODO: Hide h1 */
-.portfolio-heading {
-}
 /*  --------------- PORTFOLIO FILTERS ------------- */
 .filter-btn {
   font-family: inherit;
