--- a/css/styles.css
+++ b/css/styles.css
@@ -154,12 +154,14 @@ body {
 }
 
 /*  ----------------- PORTFOLIO ----------------- */
+
 /*  --------------- PORTFOLIO FILTERS ------------- */
 .filter-btn {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  letter-spacing: 0.03em;
   text-align: center;
   color: var(--secondary-text-color);
   background-color: var(--secondary-bg-color);
