--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,18 @@
+/* ------------------ VAR ---------------- */
 :root {
   --site-accent-color: #2196f3;
   --primary-text-color: #757575;
   --secondary-text-color: #212121;
   --primary-white-color: #fff;
   --secondary-bg-color: #f5f4fa;
+  --border-color: #eeeeee;
   --btn-bg-hover: #188ce8;
   --logo-black-color: #000;
   --primary-bg-color: #2f303a;
   --footer-contacts-color: rgb(255 255 255/ 0.6);
 }
+
+/* ------------------ PRE STYLES ---------------- */
 body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -17,9 +21,21 @@ body {
 }
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .link {
   text-decoration: none;
+}
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
 }
 .visually-hidden {
   position: absolute;
@@ -33,6 +49,20 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
+
+/* ------------------ CONTAINER ---------------- */
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.section:nth-child(2) {
+  padding-top: 94px;
+}
+.section:not(:first-child) {
+  padding-bottom: 94px;
+}
+
 /* ------------------ LOGO ---------------- */
 
 .logo {
@@ -46,16 +76,43 @@ body {
 .logo > span {
   color: var(--site-accent-color);
 }
-.footer > .logo {
+.footer .logo {
   color: var(--primary-white-color);
 }
+
+/* ------------------ HEADER ---------------- */
+.header {
+  border-bottom: 1px solid var(--border-color);
+}
+.contacts-container {
+  display: flex;
+  justify-content: space-between;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+.header-nav-list {
+  display: flex;
+  gap: 50px;
+  margin-left: 92px;
+}
+.header-contacts-list {
+  display: flex;
+  gap: 50px;
+}
+
 .header-nav-link {
+  display: block;
+  padding: 32px 0px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 }
 .header-contacts-link {
+  display: block;
+  padding: 32px 0px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -71,25 +128,32 @@ body {
 
 /* ----------------- HERO SECTION ----------------- */
 .hero-section {
+  padding: 200px 0;
+  text-align: center;
   background-color: var(--primary-bg-color);
 }
 .hero-heading {
+  width: 696px;
+  margin: 0 auto 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-white-color);
 }
 .hero-btn {
-  font-family: inherit;
+  padding: 10px 32px;
+  min-width: 200px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   background-color: var(--site-accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 0;
+  border-radius: 4px;
   cursor: pointer;
 }
 .hero-btn:hover,
@@ -98,7 +162,12 @@ body {
 }
 /* ----------------- FEATURES SECTION ----------------- */
 
+.features-list {
+  display: flex;
+  gap: 30px;
+}
 .features-title {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -111,7 +180,12 @@ body {
   letter-spacing: 0.03em;
 }
 /* ----------------- SERVICE SECTION ----------------- */
+.service-list {
+  display: flex;
+  gap: 30px;
+}
 .service-heading {
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -123,7 +197,18 @@ body {
 .team-section {
   background-color: var(--secondary-bg-color);
 }
+.teammate-list {
+  display: flex;
+  gap: 30px;
+}
+.teammate-item {
+  background: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 .team-heading {
+  margin-bottom: 50px;
+  padding-top: 94px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -132,6 +217,8 @@ body {
   color: var(--secondary-text-color);
 }
 .teammate-name {
+  margin: 30px 0 10px;
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -139,13 +226,23 @@ body {
   color: var(--secondary-text-color);
 }
 .teammate-text {
+  margin-bottom: 30px;
+  text-align: center;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
+
 /* ----------------- FOOTER ----------------- */
 .footer {
+  padding: 60px 0;
   background-color: var(--primary-bg-color);
+}
+.footer-contacts-list {
+  margin-top: 20px;
+}
+.footer-contacts-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 .footer-contacts-link {
   font-style: normal;
@@ -164,8 +261,17 @@ body {
 /*  ----------------- PORTFOLIO ----------------- */
 
 /*  --------------- PORTFOLIO FILTERS ------------- */
+
+.portfolio-filter-list {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 50px;
+}
 .filter-btn {
-  font-family: inherit;
+  padding: 6px 22px;
+  border-radius: 4px;
+  border: 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -181,6 +287,20 @@ body {
   background-color: var(--btn-bg-hover);
 }
 /*  ----------------- PORTFOLIO PROJECTS ----------------- */
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.card-content {
+  padding: 20px 24px;
+  border: 1px solid var(--border-color);
+  border-top: none;
+}
+.portfolio-item {
+  flex-basis: calc((100%-60px) / 3);
+}
 .portfolio-name {
   font-weight: 700;
   font-size: 18px;
