--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,7 @@ img {
   text-align: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-img.jpg);
   background-color: var(--primary-bg-color);
+  background-size: 1600px;
   background-repeat: no-repeat;
   background-position: center;
   border: 1px solid #000000;
@@ -191,26 +192,13 @@ img {
 .features-item {
   flex-basis: calc((100% - 90px) / 4);
 }
-.features-item::before {
-  content: "";
-  display: block;
+.features-icon-wrap {
+  display: flex;
   height: 120px;
   margin-bottom: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
+  justify-content: center;
+  align-items: center;
   background-color: var(--secondary-bg-color);
-}
-.features-item:nth-child(1)::before {
-  background-image: url(../img/features-1-antenna.svg);
-}
-.features-item:nth-child(2)::before {
-  background-image: url(../img/features-2-clock.svg);
-}
-.features-item:nth-child(3)::before {
-  background-image: url(../img/features-3-diagram.svg);
-}
-.features-item:nth-child(4)::before {
-  background-image: url(../img/features-4-astronaut.svg);
 }
 
 .features-title {
@@ -274,10 +262,11 @@ img {
   justify-content: center;
 }
 .teammate-social-link {
-  display: block;
+  display: flex;
   width: 44px;
   height: 44px;
-  padding: 12px;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
   fill: var(--icon-color);
 }
@@ -294,21 +283,19 @@ img {
 }
 .clients-link {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 170px;
   height: 92px;
-  padding: 16px 32px;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
-  color: var(--icon-color);
+  fill: var(--icon-color);
 }
-.clients-icon {
-  flex-shrink: 0;
-  fill: currentColor;
-}
+
 .clients-link:hover,
 .clients-link:focus {
   border-color: var(--site-accent-color);
-  color: var(--site-accent-color);
+  fill: var(--site-accent-color);
 }
 
 /* ----------------- FOOTER ----------------- */
@@ -355,10 +342,11 @@ img {
   gap: 10px;
 }
 .footer-social-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
-  padding: 12px;
   border-radius: 50%;
   background-color: var(--footer-icon-bg);
   fill: var(--primary-white-color);
