--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,17 @@ img {
   display: flex;
   gap: 30px;
 }
-
+.img-box {
+  position: relative;
+}
+.service-text {
+  font-weight: 700;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background: rgba(47, 48, 58, 0.8);
+}
 /* ----------------- OUR TEAM SECTION ----------------- */
 .team-section {
   background-color: var(--secondary-bg-color);
