--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 /* ------------------ VAR ---------------- */
 :root {
+  /* ------------------ VAR ---------------- */
   --site-accent-color: #2196f3;
   --primary-text-color: #757575;
   --secondary-text-color: #212121;
@@ -11,7 +12,11 @@
   --primary-bg-color: #2f303a;
   --footer-contacts-color: rgb(255 255 255/ 0.6);
   --footer-icon-bg: rgba(255, 255, 255, 0.1);
+  --box-shadow: rgba(0, 0, 0, 0.25);
   --icon-color: #afb1b8;
+  /* ------------------ OTHER ---------------- */
+  --dur-time: 250ms;
+  --bezier: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------------ PRE STYLES ---------------- */
@@ -114,6 +119,7 @@ img {
 
 .header-nav-link {
   display: block;
+  transition: color var(--dur-time) var(--bezier);
   padding: 32px 0px;
   font-weight: 500;
   line-height: 1.14;
@@ -122,6 +128,7 @@ img {
 }
 .header-contacts-link {
   display: inline-flex;
+  transition: color var(--dur-time) var(--bezier);
   align-items: center;
   padding: 32px 0px;
   font-weight: 500;
@@ -140,7 +147,21 @@ img {
 .current {
   color: var(--site-accent-color);
 }
+.header-nav-item {
+  position: relative;
+}
+.current::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  height: 4px;
+  width: 100%;
 
+  background-color: var(--site-accent-color);
+  box-shadow: 0px 4px 4px var(--box-shadow);
+  border-radius: 2px;
+}
 /* ----------------- HERO SECTION ----------------- */
 .hero-section {
   max-width: 1600px;
@@ -153,7 +174,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px var(--box-shadow);
 }
 .hero-heading {
   width: 696px;
@@ -178,6 +199,7 @@ img {
   border: 0;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color var(--dur-time) var(--bezier);
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -225,13 +247,19 @@ img {
 }
 .img-box {
   position: relative;
+  overflow: hidden;
 }
 .service-text {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 27px;
   font-weight: 700;
-  line-height: 16px;
+  line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: var(--primary-white-color);
   background: rgba(47, 48, 58, 0.8);
 }
 /* ----------------- OUR TEAM SECTION ----------------- */
@@ -280,6 +308,7 @@ img {
   align-items: center;
   border-radius: 50%;
   fill: var(--icon-color);
+  transition: background-color var(--dur-time) var(--bezier), fill var(--dur-time) var(--bezier);
 }
 .teammate-social-link:hover,
 .teammate-social-link:focus {
@@ -301,8 +330,8 @@ img {
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   fill: var(--icon-color);
+  transition: border-color var(--dur-time) var(--bezier), fill var(--dur-time) var(--bezier);
 }
-
 .clients-link:hover,
 .clients-link:focus {
   border-color: var(--site-accent-color);
@@ -325,6 +354,7 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--footer-contacts-color);
+  transition: color var(--dur-time) var(--bezier);
 }
 .address {
   color: var(--primary-white-color);
@@ -361,6 +391,7 @@ img {
   border-radius: 50%;
   background-color: var(--footer-icon-bg);
   fill: var(--primary-white-color);
+  transition: background-color var(--dur-time) var(--bezier);
 }
 .footer-social-link:hover,
 .footer-social-link:focus {
@@ -388,12 +419,14 @@ img {
   color: var(--secondary-text-color);
   background-color: var(--secondary-bg-color);
   cursor: pointer;
+  transition: color var(--dur-time) var(--bezier), background-color var(--dur-time) var(--bezier),
+    filter var(--dur-time) var(--bezier);
 }
 .filter-btn:hover,
 .filter-btn:focus {
   color: var(--primary-white-color);
   background-color: var(--btn-bg-hover);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 4px 4px var(--box-shadow));
 }
 /*  ----------------- PORTFOLIO PROJECTS ----------------- */
 
@@ -409,6 +442,10 @@ img {
 }
 .portfolio-item {
   flex-basis: calc((100% - 60px) / 3);
+}
+.portfolio-link {
+  display: inline-block;
+  transition: box-shadow var(--dur-time) cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
@@ -428,4 +465,72 @@ img {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+.portfolio-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform var(--dur-time) var(--bezier);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  color: var(--primary-white-color);
+  background: rgba(33, 150, 243, 0.9);
+}
+.portfolio-link:hover .portfolio-text,
+.portfolio-link:focus .portfolio-text {
+  transform: translateY(0);
+}
+
+/*  ----------------- BACKDROP, MODAL ----------------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: opacity var(--dur-time) var(--bezier);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform var(--dur-time) var(--bezier);
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.01);
+}
+.close-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  margin: 8px 8px 0 auto;
+  padding: 0;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: top 8px, right 8px;
+  background: inherit;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
