--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
   --box-shadow: rgba(0, 0, 0, 0.25);
   --icon-color: #afb1b8;
   /* ------------------ OTHER ---------------- */
-  --dur-time: 250ms;
+  --dur-time: 1000ms;
   --bezier: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -252,8 +252,12 @@ img {
 .service-text {
   position: absolute;
   bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  padding: 27px;
+  height: 70px;
+
   font-weight: 700;
   line-height: 1.14;
   text-align: center;
