modified:   css/styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,7 @@ img {
 .service-text {
   position: absolute;
   bottom: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
