--- a/css/styles.css
+++ b/css/styles.css
@@ -374,6 +374,9 @@ img {
   display: flex;
   align-items: baseline;
 }
+.footer-address-wrap {
+  flex-grow: 1;
+}
 .footer-social-wrap {
   margin-left: 70px;
   margin-right: 93px;
@@ -562,6 +565,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
 
   min-width: 528px;
   min-height: 581px;
@@ -617,7 +621,6 @@ img {
 
 /*  ----------------- MODAL FORM----------------- */
 .modal-title {
-  margin-top: 40px;
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
@@ -629,7 +632,6 @@ img {
 .modal-form {
   display: flex;
   flex-direction: column;
-  padding: 0 40px 40px;
 }
 
 /*  ----------------- inputs ---------------- */
