--- a/SASS/layouts/_service-section.scss
+++ b/SASS/layouts/_service-section.scss
@@ -1,27 +1,26 @@
 /* ----------------- SERVICE SECTION ----------------- */
 .service {
   padding-top: 0;
-}
-.service__list {
-  display: flex;
-  gap: 30px;
-}
 
-.service__text {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 70px;
+  &__list {
+    display: flex;
+    gap: 30px;
+  }
 
-  font-weight: 700;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--primary-white-color);
-  background: rgba(47, 48, 58, 0.8);
+  &__text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    @extend %flexed;
+
+    font-weight: 700;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-white-color);
+    background: rgba(47, 48, 58, 0.8);
+  }
 }
