--- a/SASS/utils/_variables.scss
+++ b/SASS/utils/_variables.scss
@@ -1,6 +1,7 @@
 /* ------------------ VAR ---------------- */
 :root {
-  /* ------------------ VAR ---------------- */
+  /* ------------------ COLORS ---------------- */
+
   --site-accent-color: #2196f3;
   --primary-text-color: #757575;
   --secondary-text-color: #212121;
@@ -14,7 +15,12 @@
   --footer-icon-bg: rgba(255, 255, 255, 0.1);
   --box-shadow: rgba(0, 0, 0, 0.25);
   --icon-color: #afb1b8;
-  /* ------------------ OTHER ---------------- */
+
+  /* ------------------ TRANSITION ---------------- */
   --dur-time: 250ms;
   --bezier: cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* ------------------ FONTS ---------------- */
+  --main-font: "Roboto", sans-serif;
+  --secondary-font: "Raleway", sans-serif;
 }
