SASS refactoring, using scss syntax Changes to be committed: 	modified:   .vscode/settings.json 	modified:   SASS/base/_common.scss 	modified:   SASS/base/_reset.scss 	modified:   SASS/components/_backdrop-modal.scss 	modified:   SASS/components/_btn.scss 	modified:   SASS/components/_logo.scss 	modified:   SASS/components/_modal-form.scss 	modified:   SASS/layouts/_features-section.scss 	modified:   SASS/layouts/_footer.scss 	modified:   SASS/layouts/_header.scss 	modified:   SASS/layouts/_hero-section.scss 	modified:   SASS/layouts/_our-clients-section.scss 	modified:   SASS/layouts/_our-team-section.scss 	modified:   SASS/layouts/_portfolio-filters.scss 	modified:   SASS/layouts/_portfolio-projects.scss 	modified:   SASS/layouts/_service-section.scss 	modified:   SASS/utils/_mixins.scss 	modified:   SASS/utils/_variables.scss 	modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/portfolio.css 	modified:   css/portfolio.css.map 	modified:   css/portfolio.min.css 	modified:   css/portfolio.min.css.map

--- a/SASS/base/_common.scss
+++ b/SASS/base/_common.scss
@@ -1,9 +1,6 @@
 .section-heading {
+  @include fonts(700, 36, 42, 0.03);
   margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
   text-align: center;
   color: var(--secondary-text-color);
 }
