--- a/SASS/layouts/_portfolio-projects.scss
+++ b/SASS/layouts/_portfolio-projects.scss
@@ -1,57 +1,52 @@
 /*  ----------------- PORTFOLIO PROJECTS ----------------- */
+.portfolio {
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  &__card-content {
+    padding: 20px 24px;
+    border: 1px solid var(--border-color);
+    border-top: none;
+  }
+  &__item {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+  &__link {
+    display: inline-block;
+    @include transition(box-shadow);
+  }
+  &__link:hover,
+  &__link:focus {
+    display: block;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  &__name {
+    margin-bottom: 4px;
+    @include fonts(700, 18, 36, 0.06);
+    color: var(--secondary-text-color);
+  }
+  &__type {
+    @include fonts(null, 16, 30, 0.03);
+    color: var(--primary-text-color);
+  }
+  &__text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 63px 24px;
 
-.portfolio__list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-.portfolio__card-content {
-  padding: 20px 24px;
-  border: 1px solid var(--border-color);
-  border-top: none;
-}
-.portfolio__item {
-  flex-basis: calc((100% - 60px) / 3);
-}
-.portfolio__link {
-  display: inline-block;
-  transition: box-shadow var(--dur-time) cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio__link:hover,
-.portfolio__link:focus {
-  display: block;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.portfolio__name {
-  margin-bottom: 4px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--secondary-text-color);
-}
-.portfolio__type {
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
-.portfolio__text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform var(--dur-time) var(--bezier);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  padding: 63px 24px;
-  color: var(--primary-white-color);
-  background: rgba(33, 150, 243, 0.9);
-}
-.portfolio__link:hover .portfolio__text,
-.portfolio__link:focus .portfolio__text {
-  transform: translateY(0);
+    @include fonts(null, 18, 28, 0.03);
+    transform: translateY(100%);
+    @include transition(transform);
+
+    color: var(--primary-white-color);
+    background: rgba(33, 150, 243, 0.9);
+  }
+  &__link:hover &__text,
+  &__link:focus &__text {
+    transform: translateY(0);
+  }
 }
