--- a/SASS/utils/_variables.scss
+++ b/SASS/utils/_variables.scss
@@ -21,6 +21,6 @@
   --bezier: cubic-bezier(0.4, 0, 0.2, 1);
 
   /* ------------------ FONTS ---------------- */
-  --main-font: "Roboto", sans-serif;
-  --secondary-font: "Raleway", sans-serif;
+  --font-main: "Roboto", sans-serif;
+  --font-secondary: "Raleway", sans-serif;
 }
