--- a/SASS/base/_reset.scss
+++ b/SASS/base/_reset.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: var(--font-main);
   font-size: 14px;
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
