--- a/SASS/components/_btn.scss
+++ b/SASS/components/_btn.scss
@@ -3,19 +3,17 @@
   padding: 0;
   width: 200px;
   height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+  @include fonts(700, 16, 30, 0.06);
+  border: 0;
+  border-radius: 4px;
   color: var(--primary-white-color);
   background-color: var(--site-accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border: 0;
-  border-radius: 4px;
   cursor: pointer;
-  transition: background-color var(--dur-time) var(--bezier);
-}
-.btn:hover,
-.btn:focus {
-  background-color: var(--btn-bg-hover);
+  @include transition(background-color);
+
+  &:hover,
+  &:focus {
+    background-color: var(--btn-bg-hover);
+  }
 }
