--- a/SASS/components/_logo.scss
+++ b/SASS/components/_logo.scss
@@ -1,14 +1,12 @@
 /* ------------------ LOGO ---------------- */
 .logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+  font-family: var(--font-secondary);
+  @include fonts(700, 26, 31, 0.03);
   color: var(--logo-black-color);
-}
-.logo__accent {
-  color: var(--site-accent-color);
+
+  &__accent {
+    color: var(--site-accent-color);
+  }
 }
 .footer__logo {
   color: var(--primary-white-color);
