--- a/SASS/layouts/_footer.scss
+++ b/SASS/layouts/_footer.scss
@@ -3,45 +3,41 @@
 .footer {
   padding: 60px 0;
   background-color: var(--primary-bg-color);
-}
-.footer__wrap {
-  display: flex;
-  align-items: baseline;
-}
-.footer__heading {
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--primary-white-color);
-}
 
+  &__wrap {
+    display: flex;
+    align-items: baseline;
+  }
+  &__heading {
+    margin-bottom: 20px;
+    @include fonts(700, 14, 16, 0.03, uppercase);
+    color: var(--primary-white-color);
+  }
+  &__address-wrap {
+    flex-grow: 1;
+  }
+}
 /* ---------- Adress & contacts -------- */
 
-.footer__address-wrap {
-  flex-grow: 1;
-}
-.footer-contacts {
-  margin-top: 20px;
-}
-.footer-contacts__item:not(:last-child) {
-  margin-bottom: 9px;
-}
-.footer-contacts__link {
-  font-style: normal;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--footer-contacts-color);
-  transition: color var(--dur-time) var(--bezier);
-}
 .address {
   color: var(--primary-white-color);
 }
-.footer-contacts__link:hover,
-.footer-contacts__link:focus {
-  color: var(--site-accent-color);
+.footer-contacts {
+  margin-top: 20px;
+
+  &__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
+  &__link {
+    font-style: normal;
+    @include fonts(null, 14, 24, 0.03);
+    color: var(--footer-contacts-color);
+    @include transition(color);
+  }
+  &__link:hover,
+  &__link:focus {
+    color: var(--site-accent-color);
+  }
 }
 
 /* --------- Social links -------- */
@@ -49,26 +45,24 @@
 .footer-social {
   margin-left: 70px;
   margin-right: 93px;
-}
 
-.footer-social__list {
-  display: flex;
-  gap: 10px;
-}
-.footer-social__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: var(--footer-icon-bg);
-  fill: var(--primary-white-color);
-  transition: background-color var(--dur-time) var(--bezier);
-}
-.footer-social__link:hover,
-.footer-social__link:focus {
-  background-color: var(--site-accent-color);
+  &__list {
+    display: flex;
+    gap: 10px;
+  }
+  &__link {
+    @extend %flexed;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: var(--footer-icon-bg);
+    fill: var(--primary-white-color);
+    @include transition(background-color);
+  }
+  &__link:hover,
+  &__link:focus {
+    background-color: var(--site-accent-color);
+  }
 }
 
 /* ---------- Footer sign up form -------- */
@@ -76,45 +70,47 @@
 .footer-form {
   display: flex;
   position: relative;
-}
-.footer-form__input {
-  width: 358px;
-  height: 50px;
-  padding-left: 16px;
-  padding-right: 0;
-  margin-right: 12px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  color: var(--primary-white-color);
-  background: var(--primary-bg-color);
-  transition: border var(--dur-time) var(--bezier);
-}
 
-.footer-form__label {
-  position: absolute;
-  left: 16px;
-  bottom: 50%;
-  transform: translateY(50%);
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  transition: transform var(--dur-time) var(--bezier), color var(--dur-time) var(--bezier);
-}
-.footer-form__input:focus {
-  border: 2px solid rgba(255, 255, 255, 0.6);
-}
-.footer-form__input:focus + .footer-form__label,
-.footer-form__input:not(:placeholder-shown) + .footer-form__label {
-  transform: translate(-70px, 11px);
-  color: var(--secondary-bg-color);
-}
-.footer-form__btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.footer-form__btn-icon {
-  margin-left: 10px;
+  &__input {
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+    padding-right: 0;
+    margin-right: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    color: var(--primary-white-color);
+    background: var(--primary-bg-color);
+    @include transition(border);
+  }
+
+  &__label {
+    position: absolute;
+    left: 16px;
+    bottom: 50%;
+    transform: translateY(50%);
+    @include fonts(null, 16, 20, 0.03);
+    color: rgba(255, 255, 255, 0.6);
+    @include transition(transform);
+    @include transition(color);
+  }
+
+  &__input:focus {
+    border: 2px solid rgba(255, 255, 255, 0.6);
+  }
+
+  &__input:focus + &__label,
+  &__input:not(:placeholder-shown) + &__label {
+    transform: translate(-70px, 11px);
+    color: var(--secondary-bg-color);
+  }
+
+  &__btn {
+    @extend %flexed;
+  }
+
+  &__btn-icon {
+    margin-left: 10px;
+  }
 }
