--- a/SASS/layouts/_hero-section.scss
+++ b/SASS/layouts/_hero-section.scss
@@ -11,14 +11,11 @@
   background-position: center;
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px var(--box-shadow);
-}
-.hero__heading {
-  width: 696px;
-  margin: 0 auto 30px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--primary-white-color);
+
+  &__heading {
+    width: 696px;
+    margin: 0 auto 30px;
+    @include fonts(900, 44, 60, 0.06, uppercase);
+    color: var(--primary-white-color);
+  }
 }
