--- a/SASS/layouts/_service-section.scss
+++ b/SASS/layouts/_service-section.scss
@@ -15,11 +15,8 @@
     height: 70px;
     @extend %flexed;
 
-    font-weight: 700;
-    line-height: 1.14;
+    @include fonts(700, 14, 16, 0.03, uppercase);
     text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
     color: var(--primary-white-color);
     background: rgba(47, 48, 58, 0.8);
   }
