Add scroll to top and animated it Changes to be committed: 	new file:   SASS/base/_annimations.scss 	new file:   SASS/components/_scroll-to-top.scss 	modified:   SASS/main.scss 	modified:   SASS/portfolio.scss 	modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/portfolio.css 	modified:   css/portfolio.css.map 	modified:   css/portfolio.min.css 	modified:   css/portfolio.min.css.map 	modified:   img/sprite.svg 	modified:   index.html 	modified:   portfolio.html

--- a/SASS/portfolio.scss
+++ b/SASS/portfolio.scss
@@ -5,10 +5,13 @@
 @import "./base/reset";
 @import "./base/common";
 @import "./utils/visually-hidden";
+@import "./base/annimations";
 
 // --- components ---
 @import "./components/logo";
 @import "./components/btn";
+@import "./components/scroll-to-top";
+
 // --- layouts ---
 @import "./layouts/header";
 @import "./layouts/portfolio-filters";
