--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -5,12 +5,14 @@
 @import "./base/reset";
 @import "./base/common";
 @import "./utils/visually-hidden";
+@import "./base/annimations";
 
 // --- components ---
 @import "./components/logo";
 @import "./components/btn";
 @import "./components/backdrop-modal";
 @import "./components/modal-form";
+@import "./components/scroll-to-top";
 
 // --- layouts ---
 @import "./layouts/header";
