Add opacity to scroll-to-top button Changes to be committed: 	modified:   SASS/components/_scroll-to-top.scss 	modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/portfolio.css 	modified:   css/portfolio.css.map 	modified:   css/portfolio.min.css 	modified:   css/portfolio.min.css.map

--- a/SASS/components/_scroll-to-top.scss
+++ b/SASS/components/_scroll-to-top.scss
@@ -9,7 +9,11 @@
   opacity: 0.85;
   background-color: var(--site-accent-color);
   animation: slide-top 1s linear 2s infinite alternate both;
+  @include transition(opacity);
 
+  &:hover {
+    opacity: 1;
+  }
   &__icon {
     fill: var(--primary-white-color);
     @include transition(fill);
