--- a/css/main.css
+++ b/css/main.css
@@ -328,8 +328,15 @@ img {
   width: 48px;
   height: 48px;
   border-radius: 50%;
+  opacity: 0.85;
   background-color: var(--site-accent-color);
   animation: slide-top 1s linear 2s infinite alternate both;
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.scroll-to-top:hover {
+  opacity: 1;
 }
 .scroll-to-top__icon {
   fill: var(--primary-white-color);
