Upgrade mixin "transition" Changes to be committed: 	modified:   SASS/components/_modal-form.scss 	modified:   SASS/layouts/_footer.scss 	modified:   SASS/layouts/_header.scss 	modified:   SASS/layouts/_our-clients-section.scss 	modified:   SASS/layouts/_our-team-section.scss 	modified:   SASS/layouts/_portfolio-filters.scss 	modified:   SASS/utils/_mixins.scss 	modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/portfolio.css 	modified:   css/portfolio.css.map 	modified:   css/portfolio.min.css 	modified:   css/portfolio.min.css.map

--- a/SASS/components/_modal-form.scss
+++ b/SASS/components/_modal-form.scss
@@ -20,6 +20,7 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: 0;
+    @include transition(border-color);
   }
 
   &__icon {
@@ -27,6 +28,7 @@
     left: 12px;
     top: 50%;
     transform: translateY(-50%);
+    @include transition(fill);
   }
   &__input:focus {
     border-color: var(--site-accent-color);
@@ -77,8 +79,7 @@
     border: 2px solid var(--secondary-text-color);
     border-radius: 2px;
     outline: 0;
-    @include transition(background-color);
-    @include transition(border);
+    @include transition(background-color, border);
   }
   &__input:focus + &__custom-input {
     border-color: var(--site-accent-color);
