--- a/SASS/layouts/_footer.scss
+++ b/SASS/layouts/_footer.scss
@@ -92,8 +92,7 @@
     transform: translateY(50%);
     @include fonts(null, 16, 20, 0.03);
     color: rgba(255, 255, 255, 0.6);
-    @include transition(transform);
-    @include transition(color);
+    @include transition(transform, color);
   }
 
   &__input:focus {
