--- a/SASS/layouts/_our-team-section.scss
+++ b/SASS/layouts/_our-team-section.scss
@@ -38,8 +38,7 @@
     height: 44px;
     border-radius: 50%;
     fill: var(--icon-color);
-    @include transition(fill);
-    @include transition(background-color);
+    @include transition(background-color, fill);
   }
   &__social-link:hover,
   &__social-link:focus {
